fixed foote alignment,  and main content width

--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -1,4 +1,6 @@
 footer{
     min-height: 100px;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
