--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -15,6 +15,9 @@ body{
 #gameCards{
     display: flex;
     gap: 4rem;
+    flex-wrap: wrap ;
+    width: 75%;
+    margin: 20px auto;
     justify-content: center;
 }
 .logo, .by{
